Update 1st chapter

--- a/1_What_is_Python.ipynb
+++ b/1_What_is_Python.ipynb
@@ -18,14 +18,27 @@
     "Per definition, Python is a \"multi-paradigm interpreted programming language</i>\"<br>What does this mean?\n",
     "\n",
     "* multi-paradigm: A \"paradigm\" is a way of programming, e.g. \"logic programming\" or \"object-oriented programming\". Python intends to include many paradigms, while maintaining a cute syntax :-)\n",
-    "* interpreted programming langague: "
+    "* interpreted programming langague: Usual Python commands or scripts are not directly translated into machine code. This is in contrast to \"compiled\" languages such as C, C++, Rust or Go. Instead, Python commands or scripts are *interpreted* by a Python interpreter. The Python interpreter itself is a compiled (=machine-code-translated) program which performs all neccessary computing steps.\n",
+    "\n",
+    "<pre>\n",
+    "Schematic of \"compiled\" languages (such as Rust):\n",
+    "source code file -> Compiler -> machine code binary, e.g. an .exe file\n",
+    "</pre>\n",
+    "\n",
+    "<pre>\n",
+    "Schematic of \"interpreted\" languages (such as Python):\n",
+    "Either...\n",
+    "start Python interpreter -> enter command -> command is interpreted and executed\n",
+    "...or...\n",
+    "source code file (.py) -> run Python interpreter on it -> file is interpreted and executed\n",
+    "</pre>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Short History\n",
+    "## Short History of Python\n",
     "\n",
     "* 1990: First released version of the Python interpreter, created as part of a research project by Guido van Rossum\n",
     "* 2000: Python 2 is released, with a refurbished syntax which incompatible with the previous Python\n",
@@ -41,6 +54,9 @@
    "source": [
     "## CPython and The Python Software Foundation\n",
     "\n",
+    "The Python Software Foundation is the central organization which defines Python and which approves new developments for it. In addition, supervises the development of Python's most popular interpreter, <b>CPython</b>, which is named after C, the compiled language in which it is written.\n",
+    "\n",
+    "The Python Software Foundation's (and CPython's) homepage is:\n",
     "https://www.python.org/"
    ]
   },
@@ -48,7 +64,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Python Distributions"
+    "## Python Distributions\n",
+    "\n",
+    "The standard downloadable form of CPython already includes many extra modules (e.g. for advanced mathematics or reading/writing special file formats). Such a combination of an interpreter with extra modules is called a *distribution*.\n",
+    "\n",
+    "We are going to use the Anaconda distribution, which is one of the most popular ones and which includes a huge variety of preinstalled modules. In addition, it includes a nice graphical user interface for everything :-)"
    ]
   }
  ],
