--- a/11_Outlook_at_Advanced_Topics.ipynb
+++ b/11_Outlook_at_Advanced_Topics.ipynb
@@ -11,6 +11,101 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Advanced str usage :D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AB', 'EFG']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Split a str\n",
+    "\"ABCDEFG\".split(\"CD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ABCDEFG'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Upper case\n",
+    "\"abcdefg\".upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abcdefg'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Lower case\n",
+    "\"ABCDEFG\".lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The number 123 was chosen, again: 123. 452.5 was not chosen!'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Variables in str using the f\"text{variable_name}text\" syntax\n",
+    "# (the variable does not have to be str :D)\n",
+    "x = 123\n",
+    "other = 452.5\n",
+    "text = \"chosen\"\n",
+    "f\"The number {x} was chosen, again: {x}. {other} was not {text}!\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Classes"
    ]
   },
@@ -185,10 +280,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Syntax:\n",
     "# variable_name: data_type_name\n",
@@ -248,6 +341,17 @@
    "metadata": {},
    "source": [
     "But right now, Spyder is the best editor for interactive programming with Python :-)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Git, GitHub and GitLab\n",
+    "\n",
+    "(This is also the topic of another course here at the institute :-)\n",
+    "\n",
+    "Most public Python projects are hosted on GitHub or GitLab. Both sites let you host your code project, perform automatic actions with it and create an internet presence for it. In addition, other users can interact with you."
    ]
   }
  ],
