--- a/1_What_is_Python.ipynb
+++ b/1_What_is_Python.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What is Python?\n",
-    "\n",
-    "<small>(c) Python Software Foundation</small>"
+    "# What is Python?"
    ]
   },
   {
