--- a/2_Installation_of_Anaconda.ipynb
+++ b/2_Installation_of_Anaconda.ipynb
@@ -4,8 +4,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Installation of Anaconda\n",
+    "# Installation of Anaconda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Download\n",
+    "Get the Python 3.7 version for your operating system from here:\n",
+    "\n",
     "https://www.anaconda.com/distribution/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Installation\n",
+    "\n",
+    "Run the installer, and choose all options to add Anaconda to your operating system's PATH."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Start the Python console \\o/\n",
+    "\n",
+    "Launch the *Anaconda navigator* and start the \"Qt console\" \\o/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Start Spyder \\o/\n",
+    "\n",
+    "Launch the *Anaconda navigator* and start \"Spyder\" \\o/"
    ]
   }
  ],
