Add error handling, refurbish advances topics

--- a/11_Outlook_at_Advanced_Topics.ipynb
+++ b/11_Outlook_at_Advanced_Topics.ipynb
@@ -104,6 +104,55 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Error handling\n",
+    "\n",
+    "Sometimes you know that a call may fail, but you still want to proceed within your program. You can do this with try...except... :D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Syntax:\n",
+    "# try:\n",
+    "#     code_that_may_fail\n",
+    "# except [error_code]:\n",
+    "#     code_that_is_executed_if_the_code_fails"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Conversion from str to int failed D:\nThe variable's value was: 1.24\nProgram done...\n"
+    }
+   ],
+   "source": [
+    "# Let's see it in an example :D\n",
+    "str_variable = \"1.24\"\n",
+    "try:\n",
+    "    # This fails D:\n",
+    "    int_value = int(str_variable)\n",
+    "    print(\"Value converted to int is:\")\n",
+    "    print(int_value)\n",
+    "except:\n",
+    "    print(\"Conversion from str to int failed D:\")\n",
+    "    print(f\"The variable's value was: {str_variable}\")\n",
+    "print(\"Program done...\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Classes"
@@ -113,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Classes are like dictionaries but in a more standardized way. The definition of a class describes a kind ob \"object\" and can have its own variables and methods. If the class itself is referenced, the keyword \"self\" *must* be used. In addition, classes can be automatically instantiated and can be defined like data types, e.g. by defining behavior for operators such as \"+=\" (but most computer scientists hate this trick D:)."
+    "Classes are like dictionaries (although some computer scientists may argue about it xD) but in a more standardized way. The definition of a class describes a kind ob \"object\" and can have its own variables and methods. If the class itself is referenced, the keyword \"self\" *must* be used. In addition, classes can be automatically instantiated and can be defined like data types, e.g. by defining behavior for operators such as \"+=\" (but most computer scientists hate this trick D:)."
    ]
   },
   {
@@ -280,8 +329,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Syntax:\n",
     "# variable_name: data_type_name\n",
@@ -340,7 +391,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But right now, Spyder is the best editor for interactive programming with Python :-)"
+    "Visual Studio Code is my personal recommendation for non-interactive programming :-)\n",
+    "\n",
+    "But right now, Spyder is the best editor for interactive programming with Python :D"
    ]
   },
   {
@@ -349,9 +402,9 @@
    "source": [
     "## Git, GitHub and GitLab\n",
     "\n",
-    "(This is also the topic of another course here at the institute :-)\n",
+    "(Git was also the topic of another course here at the institute :-)\n",
     "\n",
-    "Most public Python projects are hosted on GitHub or GitLab. Both sites let you host your code project, perform automatic actions with it and create an internet presence for it. In addition, other users can interact with you."
+    "Most public Python projects are hosted on GitHub or GitLab. Both sites let you host your code project (also in hidden private repositories), perform automatic actions with it and create an internet presence for it. In addition, other users can interact and connect with you."
    ]
   }
  ],
