Add code line separation

--- a/4_Comments_and_Variables.ipynb
+++ b/4_Comments_and_Variables.ipynb
@@ -262,6 +262,45 @@
     "variable = input(\"Please enter the variable:\")\n",
     "print(variable)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Splitting long code lines with \"\\\"\n",
+    "\n",
+    "If you have a very long code line..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "very_long_and_unrecommended_python_variable_name = \"Very long string with some text written in the latin alphabet\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "...you can split it with \"\\\" after a logical code part, such as after the \"=\":"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "very_long_and_unrecommended_python_variable_name = \\\n",
+    "    \"Very long string with some text written in the latin alphabet\""
+   ]
   }
  ],
  "metadata": {
